--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ nav li>a.active {
     max-height: 100vh;
     height: 100vh;
     overflow-y: auto;
+    max-width: 100vw;
 }
 
 .nav-offcanvas.active {
